LVJ-11: Fix interceptee styling and wrapping

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -48,7 +48,14 @@ html, body {
 
 .center-vertical {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+}
+
+.stretch-vertical {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
 }
 
 hr {
